More equation helper stuff

--- a/EquationHelper/.classpath
+++ b/EquationHelper/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/OptionProvider"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/LispInterpreter"/>
+	<classpathentry kind="lib" path="lib/jna.jar"/>
+	<classpathentry kind="lib" path="lib/platform.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
